--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "framer-motion": "^11.1.7",
+    "js-cookie": "^3.0.5",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.372.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-paginate": "^8.2.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
